--- a/Modelbouwer/View/BrandExport.xaml
+++ b/Modelbouwer/View/BrandExport.xaml
@@ -6,7 +6,8 @@
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Title="BrandExport"
-	mc:Ignorable="d">
+	mc:Ignorable="d"
+	>
 
 	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
 		<Grid>
@@ -28,13 +29,15 @@
 					<TextBlock
 						Grid.Column="0"
 						Style="{DynamicResource Title}"
-						Text="{StaticResource Export.Brand.Title}" />
+						Text="{StaticResource Export.Brand.Title}"
+						/>
 				</Grid>
 				<Path Style="{DynamicResource TitleLine}" />
 				<TextBlock
 					Grid.Column="0"
 					Style="{DynamicResource SubTitle}"
-					Text="{StaticResource Export.Brand.Subtitle}" />
+					Text="{StaticResource Export.Brand.Subtitle}"
+					/>
 			</StackPanel>
 			<!--  endregion Title of the page  -->
 
@@ -61,7 +64,8 @@
 						VerticalAlignment="Top"
 						Click="Export"
 						Style="{StaticResource ButtonRoundedWhite}"
-						ToolTip="{StaticResource Export.Button.Tooltip}">
+						ToolTip="{StaticResource Export.Button.Tooltip}"
+						>
 						<StackPanel Orientation="Horizontal">
 							<Image Source="{StaticResource Export}" />
 							<StackPanel Margin="5,0,0,0" Orientation="Vertical">
@@ -75,7 +79,8 @@
 						Grid.Row="0"
 						Grid.Column="1"
 						Click="SelectFolder"
-						Style="{DynamicResource ButtonRoundedWhite}">
+						Style="{DynamicResource ButtonRoundedWhite}"
+						>
 						<Image Source="{StaticResource searchfolder}" Stretch="Uniform" />
 					</Button>
 					<TextBlock
@@ -85,7 +90,8 @@
 						Width="Auto"
 						Margin="15,0,0,0"
 						VerticalAlignment="Center"
-						Text="{StaticResource Export.Button.Foldername}" />
+						Text="{StaticResource Export.Button.Foldername}"
+						/>
 				</Grid>
 			</StackPanel>
 			<!--#endregion-->
@@ -96,14 +102,16 @@
 				Height="30"
 				Margin="5"
 				VerticalAlignment="Center"
-				Background="LightGray">
+				Background="LightGray"
+				>
 				<Grid>
 					<StackPanel Orientation="Horizontal">
 						<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Export.Statusline.Text}" />
 						<TextBlock
 							Name="dispStatusLine"
 							Style="{DynamicResource Status.Description}"
-							Text="{DynamicResource Export.Statusline.Description}" />
+							Text="{DynamicResource Export.Statusline.Description}"
+							/>
 					</StackPanel>
 				</Grid>
 			</DockPanel>
