Add product and order management features
- Implemented `GetProductsForSupplierList` and `GetLatestAddedId` methods in `DBCommands`.
- Updated `DBNames` for new stored procedures and parameter names.
- Enhanced `StorageOrder.xaml` with a delete button and updated UI elements.
- Improved `SupplyOrderViewModel` for order deletion and saving logic.
- Updated project file version and added new icon for toolbar.

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -683,6 +683,7 @@
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderTotalCosts.Text">Totaal</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.Supplier.Toolbar.Clear.Tooltip">Reset de bestelling</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.Supplier.Toolbar.Save.Tooltip">Sla de bestelling op en werk, indien nodig, de artikelen per leverancier bij</system:String>
+	<system:String x:Key="Edit.Inventory.Orders.Supplier.Toolbar.Delete.Tooltip">Verwijder deze geselecteerde bestelling</system:String>
 	<!--#endregion-->
 
 	<!--#region Order products-->
