--- a/Modelbouwer/Resources/Styles/General.xaml
+++ b/Modelbouwer/Resources/Styles/General.xaml
@@ -2089,6 +2089,14 @@
 
 	</Style>
 
+	<Style x:Key="ToolBarTrashIcon" TargetType="Image">
+		<Setter Property="Height" Value="14" />
+		<Setter Property="Margin" Value="5,0,0,0" />
+		<Setter Property="Source" Value="/Resources/Icons/toolbarTrash.png" />
+		<Setter Property="Width" Value="14" />
+	</Style>
+
+
 	<Style x:Key="ToolBarResetIcon" TargetType="Image">
 		<Setter Property="Height" Value="14" />
 		<Setter Property="Margin" Value="5,0,0,0" />
