Finished StorageOrder WOrking on ProductManagement, product prices can be more trhe 2 decimals. If a package of 100 piecest costs 0.50 then 1 single piece costs 0.005. First only 2 decimals where accepted.

--- a/Modelbouwer/App.xaml
+++ b/Modelbouwer/App.xaml
@@ -14,6 +14,7 @@
 				<ResourceDictionary Source="Resources/Languages/Language.xaml" />
 				<ResourceDictionary Source="Resources/Styles/Button.xaml" />
 				<ResourceDictionary Source="Resources/Styles/ComboBox.xaml" />
+				<ResourceDictionary Source="Resources/Styles/DatePicker.xaml" />
 				<ResourceDictionary Source="Resources/Styles/DataGrid.xaml" />
 				<ResourceDictionary Source="Resources/Styles/General.xaml" />
 				<ResourceDictionary Source="Resources/Styles/Label.xaml" />
