--- a/Modelbouwer/Resources/Styles/TextBox.xaml
+++ b/Modelbouwer/Resources/Styles/TextBox.xaml
@@ -44,6 +44,7 @@
 		BasedOn="{StaticResource DefaultDataPicker}"
 		TargetType="DatePicker"
 		>
+		<!--  Red Border if incorrect or no date has been enterend  -->
 		<Style.Triggers>
 			<Trigger Property="Text" Value="">
 				<Setter Property="BorderBrush" Value="Red" />
